# simple-sdl-sprite-benchmark

./: .gitignore  CMakeLists.txt  Makefile  README.md  bench.c  config.h  debug_font.h  sdl2.c  sdl3.c  sprite_data.h
